2008-12-24  Ben Abbott  <bpabbott@mac.com>

	* DLD-FUNCTIONS/chol.cc: Compare results to 0 in tests.
	Delete spurious function calls in test block.

2008-12-24  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/eigs.cc: Use "testif HAVE_ARPACK" to skip tests if
	ARPACK is not available.

	* Makefile.in (DLD_XSRC): Add eigs.cc to the list.

	* load-save.cc (parse_save_options): Handle -double.

2008-12-23  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/eigs.cc: New file.
	* Makefile.in (DLD_XSRC): Add it here.

2008-12-22  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/__voronoi__.cc (F__voronoi__): Resize AtInf array
	before returning it.

2008-12-12  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/chol.cc (Fcholinv): Add test.

2008-12-12  Jaroslav Hajek  <highegg@gmail.com>

	* ls-hdf5.cc (add_hdf5_data): Check for diagonal & permutation
	matrices and convert them to full prior to saving.

2008-12-11  Jaroslav Hajek  <highegg@gmail.com>
	
	* ov-re-mat.cc (Fdouble): Handle diagonal & perm matrices. 
	* ov-flt-re-mat.cc (Fsingle): Handle diagonal & perm matrices. 

2008-12-11  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-diag.cc (octave_base_diag<DMT,MT>::subsasgn): New method.
	* ov-base-diag.h (octave_base_diag<DMT,MT>::subsasgn): Declare it.
	(octave_base_diag<DMT,MT>::chk_valid_scalar): New method decl.

	* ov-re-diag.cc (octave_diag_matrix::chk_valid_scalar): New method
	override.
	* ov-re-diag.h: Declare it.
	* ov-flt-re-diag.cc (octave_float_diag_matrix::chk_valid_scalar): New
	method override.
	* ov-flt-re-diag.h: Declare it.
	* ov-cx-diag.cc (octave_complex_diag_matrix::chk_valid_scalar): New 
	method override.
	* ov-cx-diag.h: Declare it.
	* ov-flt-cx-diag.cc (octave_float_complex_diag_matrix::chk_valid_scalar): 
	New method override.
	* ov-flt-cx-diag.h: Declare it.

2008-12-10  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/expm.cc: Remove.
	* Makefile.in: Update.

2008-12-10  Jaroslav Hajek  <highegg@gmail.com>
